# bensh

./: .clang-format  .gitignore  .replit  CPPLINT.cfg  Makefile  README.md  build.py  clean.sh  justfile  meson.build  premake5.lua  replit.nix
.forgejo/workflows/: test.yml
.github/workflows/: lint.yml  test.yml
examples/: hello_world.bensh
include/: command.h  environment.h  execution.h  lang.h  sigdefs.h
src/: bensh.hpp  command.c  commands.cpp  environment.c  execution.c  help.cpp  io.cpp  lang.c  main.c  main.cpp  sigdefs.c  signals.cpp
subprojects/: mpc.wrap  pcq.wrap
subprojects/packagefiles/mpc/: meson.build
subprojects/packagefiles/pcq/: meson.build
tests/: test_command.c  test_lang.c
